- revised filters styling to accommodate extra space for type filter - fixed dropdown close bug

--- a/property-crunch-frontend/public/assets/css/components_header.less
+++ b/property-crunch-frontend/public/assets/css/components_header.less
@@ -4,7 +4,7 @@
 #sticky-header {
     width: 100%;
     position: fixed;
-    z-index: 2000;
+    z-index: 6;
 }
 
 .navbar-default {
