--- a/property-crunch-frontend/public/assets/css/components_selectboxes.less
+++ b/property-crunch-frontend/public/assets/css/components_selectboxes.less
@@ -71,7 +71,7 @@
         }
         
         .selectbox-list {
-            width: 140px;
+            width: 100%;
             height: @selectbox-sm-height;
             
             button {
