--- a/property-crunch-frontend/public/assets/css/general_styling.less
+++ b/property-crunch-frontend/public/assets/css/general_styling.less
@@ -245,7 +245,7 @@ p, ul {
 .loading {
      background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
      position: fixed;
-     z-index: 7;
+     z-index: 10;
      width: 100%;
      height: 100%;
      
