--- a/property-crunch-frontend/public/assets/css/pages_search_results.less
+++ b/property-crunch-frontend/public/assets/css/pages_search_results.less
@@ -94,8 +94,12 @@
     padding: 25px 20px;
     
     .filter-row {
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         .clearfix();
+            
+            &.spinner-row {
+                margin: 25px 0 20px;
+            }
     }
     
     .btn-fullwidth {
