--- a/property-crunch-frontend/public/assets/css/style.css
+++ b/property-crunch-frontend/public/assets/css/style.css
@@ -319,7 +319,7 @@ ul {
 .loading {
   background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
   position: fixed;
-  z-index: 7;
+  z-index: 10;
   width: 100%;
   height: 100%;
 }
@@ -2163,7 +2163,7 @@ textarea.form-control {
   line-height: 33px;
 }
 .selectbox.selectbox-sm .selectbox-list {
-  width: 140px;
+  width: 100%;
   height: 35px;
 }
 .selectbox.selectbox-sm .selectbox-list button {
@@ -2345,7 +2345,7 @@ i.icon-help:hover {
 #sticky-header {
   width: 100%;
   position: fixed;
-  z-index: 2000;
+  z-index: 6;
 }
 .navbar-default {
   margin-bottom: 0;
@@ -3123,7 +3123,7 @@ footer.default-footer ul li:last-child {
   padding: 25px 20px;
 }
 .refine-filters .filter-row {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 .refine-filters .filter-row:before,
 .refine-filters .filter-row:after {
@@ -3132,6 +3132,9 @@ footer.default-footer ul li:last-child {
 }
 .refine-filters .filter-row:after {
   clear: both;
+}
+.refine-filters .filter-row.spinner-row {
+  margin: 25px 0 20px;
 }
 .refine-filters .btn-fullwidth {
   margin: 10px 0 20px;
